--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -28,14 +28,19 @@
             .about_text {
                 margin: 1rem;
             }
-            .button {
-                color: black;
-                background: $color2;
-                margin-right: 0.5rem;
-                transition: transform 0.2s;
-            }
-            .button:hover {
-                transform: scale(1.1);
+            .buttons {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-evenly;
+                .button {
+                    color: black;
+                    background: $color2;
+                    margin-right: 0.5rem;
+                    transition: transform 0.2s;
+                }
+                .button:hover {
+                    transform: scale(1.1);
+                }
             }
         }
         .about_content_dark {
